--- a/index.html
+++ b/index.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html lang="es">
-  <head>
-    <meta charset="UTF-8">
-    <link rel="icon" href="/iconoAZ.ico">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Licencia Master</title>
-  </head>
-  <body class="overflow-x-hidden">
-    <div id="app"></div>
-    <script type="module" src="/src/main.ts"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8">
+  <link rel="icon" href="./iconoAZ.ico">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Licencia Master</title>
+</head>
+
+<body class="overflow-x-hidden">
+  <div id="app"></div>
+  <script type="module" src="./src/main.ts"></script>
+</body>
+
 </html>
