--- a/public/index.html
+++ b/public/index.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 <html lang="es">
-  <head>
-    <meta charset="UTF-8">
-    <link rel="icon" href="/iconoAZ.ico">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Licencia Master</title>
-    <script type="module" crossorigin src="/assets/main-BHM5J13E.js"></script>
-    <link rel="modulepreload" crossorigin href="/assets/vendor-DGpyFa2x.js">
-    <link rel="stylesheet" crossorigin href="/assets/main-Cv-qQdci.css">
-  </head>
-  <body class="overflow-x-hidden">
-    <div id="app"></div>
-  </body>
+
+<head>
+  <meta charset="UTF-8">
+  <link rel="icon" href="./iconoAZ.ico">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Licencia Master</title>
+  <script type="module" crossorigin src="/assets/main-BHM5J13E.js"></script>
+  <link rel="modulepreload" crossorigin href="/assets/vendor-DGpyFa2x.js">
+  <link rel="stylesheet" crossorigin href="/assets/main-Cv-qQdci.css">
+</head>
+
+<body class="overflow-x-hidden">
+  <div id="app"></div>
+</body>
+
 </html>
