--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
   <link rel="icon" href="./iconoAZ.ico">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Licencia Master</title>
-  <script type="module" crossorigin src="/assets/main-DutBq2CO.js"></script>
+  <script type="module" crossorigin src="/assets/main-cPp6aHSk.js"></script>
   <link rel="modulepreload" crossorigin href="/assets/vendor-DGpyFa2x.js">
   <link rel="stylesheet" crossorigin href="/assets/main-BNXmhaPr.css">
 </head>
