--- a/public/index.html
+++ b/public/index.html
@@ -6,9 +6,9 @@
   <link rel="icon" href="./iconoAZ.ico">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Licencia Master</title>
-  <script type="module" crossorigin src="/assets/main-cPp6aHSk.js"></script>
+  <script type="module" crossorigin src="/assets/main-LGwlb5-c.js"></script>
   <link rel="modulepreload" crossorigin href="/assets/vendor-DGpyFa2x.js">
-  <link rel="stylesheet" crossorigin href="/assets/main-BNXmhaPr.css">
+  <link rel="stylesheet" crossorigin href="/assets/main-DUEdf88d.css">
 </head>
 
 <body class="overflow-x-hidden">
