--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
   <link rel="icon" href="./iconoAZ.ico">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Licencia Master</title>
-  <script type="module" crossorigin src="/assets/main-DV0yNSWZ.js"></script>
+  <script type="module" crossorigin src="/assets/main-D0tyeqV6.js"></script>
   <link rel="modulepreload" crossorigin href="/assets/vendor-kSdKtVgQ.js">
   <link rel="stylesheet" crossorigin href="/assets/main-DZOhuQq7.css">
 </head>
