--- a/public/index.html
+++ b/public/index.html
@@ -6,9 +6,9 @@
   <link rel="icon" href="./iconoAZ.ico">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Licencia Master</title>
-  <script type="module" crossorigin src="/assets/main-D0tyeqV6.js"></script>
+  <script type="module" crossorigin src="/assets/main-BF7h7cdJ.js"></script>
   <link rel="modulepreload" crossorigin href="/assets/vendor-kSdKtVgQ.js">
-  <link rel="stylesheet" crossorigin href="/assets/main-DZOhuQq7.css">
+  <link rel="stylesheet" crossorigin href="/assets/main-CDa-gdhM.css">
 </head>
 
 <body class="overflow-x-hidden">
