--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,8 @@
   <link rel="icon" href="./iconoAZ.ico">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Licencia Master</title>
-  <script type="module" crossorigin src="/assets/main-C2KqioDG.js"></script>
-  <link rel="modulepreload" crossorigin href="/assets/vendor-kSdKtVgQ.js">
+  <script type="module" crossorigin src="/assets/main-JrQqrZNn.js"></script>
+  <link rel="modulepreload" crossorigin href="/assets/vendor-Ccg-aw64.js">
   <link rel="stylesheet" crossorigin href="/assets/main-CLaab3It.css">
 </head>
 
