--- a/public/index.html
+++ b/public/index.html
@@ -6,9 +6,9 @@
   <link rel="icon" href="./iconoAZ.ico">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Licencia Master</title>
-  <script type="module" crossorigin src="/assets/main-JrQqrZNn.js"></script>
-  <link rel="modulepreload" crossorigin href="/assets/vendor-Ccg-aw64.js">
-  <link rel="stylesheet" crossorigin href="/assets/main-CLaab3It.css">
+  <script type="module" crossorigin src="/assets/main-DGD-dwOQ.js"></script>
+  <link rel="modulepreload" crossorigin href="/assets/vendor-By6GlhG9.js">
+  <link rel="stylesheet" crossorigin href="/assets/main-B7uRaQQ-.css">
 </head>
 
 <body class="overflow-x-hidden">
