--- a/public/index.html
+++ b/public/index.html
@@ -5,20 +5,15 @@
   <meta charset="UTF-8">
   <link rel="icon" href="./iconoAZ.ico">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Licencia Master</title>
-<<<<<<< HEAD
-  <script type="module" crossorigin src="/assets/main-DGD-dwOQ.js"></script>
-  <link rel="modulepreload" crossorigin href="/assets/vendor-By6GlhG9.js">
-  <link rel="stylesheet" crossorigin href="/assets/main-B7uRaQQ-.css">
-=======
-  <script type="module" crossorigin src="/assets/main-DNdsYRhx.js"></script>
+  <title>Aplace To Learn</title>
+  <script type="module" crossorigin src="/assets/main-BRGG2ENe.js"></script>
   <link rel="modulepreload" crossorigin href="/assets/vendor-_G-qYwe8.js">
   <link rel="stylesheet" crossorigin href="/assets/main-8mLyUc-5.css">
->>>>>>> 8921dbe2628328ad044df308cfeaba50a75d345f
 </head>
 
 <body class="overflow-x-hidden">
-  <div id="app"></div>
+  <div id="app"></div>
+
 </body>
 
 </html>
