--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
   <link rel="icon" href="./iconoAZ.ico">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Gestor Aplace To Learn</title>
-  <script type="module" crossorigin src="/assets/main-R-kUe3IB.js"></script>
+  <script type="module" crossorigin src="/assets/main-gzkQ3qBF.js"></script>
   <link rel="modulepreload" crossorigin href="/assets/vendor-IL7vBm7x.js">
   <link rel="stylesheet" crossorigin href="/assets/main-B-aCEETV.css">
 </head>
